[package]
name = "nft"
version = "0.1.0"
authors = ["Kevin Janada <kevin.janada@gmail.com>"]
edition = "2018"

exclude = [
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { version = "0.9.1" }
cw2 = { version = "0.9.1" }
cw721 = { path = "../../packages/cw721", version = "0.9.2" }
cw-storage-plus = { version = "0.9.1" }
cosmwasm-std = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
